# AdvancedMechatronics

./: stmcurent.py
.metadata/: .log4j2.xml  version.ini
HW2/homework2/: CMakeLists.txt  homework2.c
dev_hid_composite/: mpu6050.c
homework10/: code.py  dino_game.py  gillian.py
homework11/.metadata/: .log4j2.xml  version.ini
homework11/homework11/: .cproject  .project  homework11 Debug.launch  homework11.ioc
homework12/.metadata/: .log4j2.xml  version.ini
homework12/FDCAN_Com_Polling/: .mxproject
homework14/: code.py  main.c
homework16/FDCAN_Com_Polling/: FDCAN_Com_Polling.ioc
homework17/: CMakeLists.txt  graphics.py  haptic_plot.py  hw17.c  test.py
homework2/homework2/: homework2.py
homework3/: CMakeLists.txt  homework3.c
homework3-i2c/: CMakeLists.txt  homework3-i2c.c
homework4/: CMakeLists.txt  homework4.c  ssd1306.c  ssd1306.h
homework5/: CMakeLists.txt  homework5.c  ssd1306.c
homework6/: CMakeLists.txt  main.c  mpu6050.h
homework7/: CMakeLists.txt  homework7.c
homework8/: CMakeLists.txt  homework8.c
homework9/: homework9.py  homework9_fir.py  homwork9_iir.py
hw10/: code.py  dino_game.py  hello.py
hw14-pico/: CMakeLists.txt  code.py  main.c
hw18test/: CMakeLists.txt  hw18test.c
inasensortest/: CMakeLists.txt  inasensortest.c  main.c  plot.py
motor_testing/: CMakeLists.txt  ina219 copy.h  inasensortest.c  motor_testing.c
picontrollercode/: CMakeLists.txt
pwmtest/: CMakeLists.txt
stmcurrentsensor/.metadata/: .log4j2.xml  version.ini
stmcurrentsensor/FDCAN_Com_Polling/: .mxproject  .project  FDCAN_Com_Polling.ioc
(+238 files in other folders)
