cmake_minimum_required(VERSION 3.13)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)

project(HW14 C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

add_executable(HW14
    main.c
)

pico_enable_stdio_usb(HW14 1)
pico_enable_stdio_uart(HW14 0)

target_link_libraries(HW14
    pico_stdlib
    hardware_gpio
)

pico_add_extra_outputs(HW14)